kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-sports-team
  namespace: random-sports-team
spec:
  selector:
    app: random-sports-team
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
