kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: random-sports-team-ingress
  namespace: random-sports-team
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: random-sports-team
          servicePort: 8080
